# mutafitup

./: .editorconfig  .envrc  .gitignore  LICENSE.md  NOTICE  README.md  environment.linux-64.pin.txt  environment.osx-arm64.pin.txt  environment.yml  justfile  pyproject.toml  snapshot_results.py
.github/workflows/: deploy-pages.yml  release-desktop.yml
THIRD_PARTY_LICENSES/: CAMBRIAN_OPEN_LICENSE.md
app/: .gitignore  Cargo.toml  Dioxus.toml  justfile  tailwind.css
app/assets/: styles.css  tailwind.css  task_labels.json
app/src/: fasta.rs  main.rs  portal.rs  prediction_controls.rs  prediction_view.rs  sequence_input.rs  sequence_list.rs  tooltip.rs
app/src/components/: mod.rs
app/src/components/button/: style.css
app/src/components/modal/: component.rs
app/src/inference/: mod.rs  native.rs  preprocessing.rs  tokenizer.rs  web.rs
app/src/model_store/: mod.rs  native.rs  web.rs
config/: config.yml  config_dev.yml
config/schemas/: config.schema.yml
resources/: sota_metrics.yml
scripts/: extract_checkpoint_history.py  pin-conda-envs.sh  upload_datasets_to_huggingface.py  upload_to_huggingface.py
src/mutafitup/: dataset.py  device.py  embedding_cache.py  export_onnx.py  hf_naming.py  metrics.py  normalization_stats.py  predict.py  predict_proba.py  random.py  task_display_names.py
src/mutafitup/datasets/: __init__.py  base_multitask_dataset.py  cached_embedding_dataset.py  data_collator.py  per_protein_classification_dataset.py  per_protein_regression_dataset.py  per_residue_classification_dataset.py  per_residue_regression_dataset.py
src/mutafitup/evaluation/: __init__.py  auprc_metrics.py  auprc_resolve.py  auprc_summary.py  bootstrap.py  metrics.py  plotting.py  resolve.py  typst_tables.py
src/mutafitup/models/: __init__.py  multitask_model.py  uncertainty_loss_weights.py
src/mutafitup/plotting/: __init__.py  parameter_counts.py  plot_parameter_counts.py  plot_training_history.py  typst_tables.py
src/mutafitup/train/: __init__.py  base_trainer.py  checkpointing.py  dataloaders.py  strategy.py  train_multitask_accgrad_lora.py  train_multitask_align_lora.py  train_multitask_heads_only.py  train_multitask_lora.py  train_multitask_model.py  utils.py
src/wfutils/: __init__.py  foldseek.py  logging.py
tests/: conftest.py
tests/helpers/: train_multitask.py
tests/leakage_analysis/: test_config_schema.py  test_extract_fasta.py  test_plot_heatmap.py  test_plot_removal.py  test_search_scripts.py  test_snakemake_helpers.py
tests/mutafitup/: test_embedding_cache.py  test_metrics_delta.py  test_normalization_stats.py  test_predict.py
tests/mutafitup/datasets/: test_cached_embedding_dataset.py  test_data_collator.py  test_datasets_init.py  test_per_protein_classification_dataset.py  test_per_protein_regression_dataset.py  test_per_residue_classification_dataset.py  (+1 more)
tests/resplit/: test_compute_resplit.py  test_merge_clusters.py
tests/wfutils/: test_logging.py
workflow/: Snakefile
workflow/rules/: common.smk  data_stats.smk  evaluation.smk  finetune.smk  plotting.smk  predict.smk  prepare_data.smk  representation_eval.smk  resplit.smk  subsample.smk
workflow/scripts/: subsample_dataset.py
(+155 files in other folders)
